<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BAtr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="cambiarMensaje"
        android:text="@string/Atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="111dp"
        android:layout_height="120dp"
        android:layout_marginBottom="432dp"
        android:contentDescription="@string/IconoAPPEnPantalla"
        app:layout_constraintBottom_toTopOf="@+id/TextCuadro"
        app:layout_constraintEnd_toStartOf="@+id/BSig"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toEndOf="@+id/BAtr"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/TextCuadro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/NombreImagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BSig"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/BAtr" />

    <TextView
        android:id="@+id/Hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="456dp"
        android:text="@string/NombreImagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/Variante"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:text="@string/SelectorDeFondo"
        app:layout_constraintBottom_toTopOf="@+id/TextCuadro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="1.0" />

    <CalendarView
        android:id="@+id/Calendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Variante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Rojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="52dp"
        android:onClick="cambiarRojo"
        android:text="@string/rojo"
        app:layout_constraintBottom_toTopOf="@+id/Calendario"
        app:layout_constraintStart_toEndOf="@+id/Logo" />

    <Button
        android:id="@+id/Amarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:onClick="cambiarAmarillo"
        android:text="@string/amarillo"
        app:layout_constraintBottom_toTopOf="@+id/Calendario"
        app:layout_constraintEnd_toStartOf="@+id/Logo" />

</androidx.constraintlayout.widget.ConstraintLayout>